--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "deploy": "gh-pages -d dist",
     "test": "jest",
     "lint": "eslint .",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "watch": "tsc -w",
+    "building": "tsc"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,7 @@
     "@babel/cli": "^7.22.15",
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
+    "@types/jest": "^29.5.10",
     "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -38,6 +41,9 @@
     "jest": "^29.6.4",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.6",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
